--- a/spring-boot-muitdasource/src/main/resources/config/application.properties
+++ b/spring-boot-muitdasource/src/main/resources/config/application.properties
@@ -4,9 +4,9 @@ server.port=8081
 server.address=127.0.0.1
 #server.sessionTimeout=30
 server.contextPath=/aaa
-spring.datasource.url = jdbc:mysql://192.168.218.241/chipsystem?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.username = chipuser
-spring.datasource.password = chippasswd
+spring.datasource.url = jdbc:mysql://localhost:3306/chipsystem?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username = root
+spring.datasource.password = root
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.datasource.max-wait=10000
 spring.datasource.max-active=5
@@ -16,9 +16,9 @@ spring.datasource.auto-commit=true
 spring.datasource.connection-test-query=select 1
 
 
-spring.datasource2.url = jdbc:mysql://10.0.0.55/chipsystem?useUnicode=true&characterEncoding=UTF-8
-spring.datasource2.username = iotlock
-spring.datasource2.password = 123
+spring.datasource2.url = jdbc:mysql://localhost:3306/chipsystem?useUnicode=true&characterEncoding=UTF-8
+spring.datasource2.username = root
+spring.datasource2.password = root
 spring.datasource2.driverClassName = com.mysql.jdbc.Driver
 spring.datasource2.max-wait=10000
 spring.datasource2.max-active=5
